--- a/style.css
+++ b/style.css
@@ -1,17 +1,43 @@
-body.hide-cursor * {
-    cursor: none;
-  }
+body{
+  background-color: #ffffff;
+  cursor: none;
+  height: 120vh;
+}
+.small{
+  width: 6px;
+  height: 6px;
+  border: 2px solid #000000;
+  border-radius: 50%;
+}
+.big{
+  width: 50px;
+  height: 50px;
+  background-color: white;
+  border-radius: 50%;
+  margin-bottom: 20rem;
+  animation-name: stretch;
+            animation-duration: 2.0s;
+            animation-timing-function: ease-out;
+            animation-direction: alternate;
+            animation-iteration-count: infinite;
+            animation-play-state: running;
+}
+
+
+@keyframes stretch {
+            0% {
+               
+                opacity: 0.2;
+                background-color: green;
+                border-radius: 100%;
+            }
   
+            50% {
+                background-color: orange;
+            }
   
-  .circle {
-    position: absolute;
-    width: 20px;
-    height: 20px;
-    background-color: black;
-    border-radius: 80%;
-  }
-  /*
-  .hide-cursor {
-    cursor: none;
-  }
-  
+            100% {
+                //transform: scale(2.0);
+                background-color: red;
+            }
+        }
