--- a/style.css
+++ b/style.css
@@ -307,64 +307,35 @@ footer {
   transition: width 0.5s ease;
 }
 
-table{
-  border-collapse: separate;  /* Ensures separate borders for spacing */
-  border-spacing: 20px 25px; 
+.hoverable {
+  font-size: 300%; /* Adjust the font size as needed */
+  cursor: none;
+  display:inline-block; /* Ensure the links take up the full width of the table cells */
+  text-align: left; /* Adjust text alignment: left, center, right */
+  margin: 20px 0; /* Add some margin for spacing between items */
+  font-weight: light;
   
 }
 
-/* Target the table cells containing project names (td) */
+/* Optional: You can add more specific styles for the table and cells if needed */
+table {
+  width: 100%; /* Make the table take up the full width */
+}
+
 td {
-
-  /* Adjust font properties */
-  /*font-family: Arial, sans-serif;   Change font family to your preference */
-  font-size: 200%;                 /* Modify font size as desired */
-  
-
-  /* Control spacing around the text */
-  padding: 15px 0px;            /* Adjust padding for top/bottom and left/right */
-
-  /* Control spacing between table cells */
-  margin-bottom: 15px;            /* Add space between rows (optional) */
+  padding: 10px; /* Add some padding to table cells */
 }
 
-/* Add styles for the table cell hover effect */
-td.hoverable:hover {
-  /*background-color: orange;  Set the background color to orange on hover */
-  cursor: none; /* Change cursor to pointer on hover */
-  padding: 5px; /* Adjust padding to control the size of the orange background */
-  display: inline-block; /* Make the table cell behave like a block element */
-  width: auto; /* Allow the width to adjust based on content */
-}
-
-@media (max-width: 600px) {
-  table {
-    border-spacing: 0px 20px; /* Decrease border spacing for mobile */
-  }
-
-  td {
-    font-size: 150%; /* Decrease font size for mobile */
-    padding: 15px 0px; /* Adjust padding for top/bottom and left/right */
-    margin-bottom: 10px; /* Decrease space between rows */
-    margin-left: 0; /* Remove left margin */
-    padding-left: 0;
-  }
-
-  td.hoverable:hover {
-    padding: 0; /* Decrease padding for hover effect */
-  }
-}
 
 .image-overlay {
   position: fixed;
-  top: 50%; /* Position the overlay 50% down from the top */
-  left: 50%; /* Position the overlay 50% from the left */
-  transform: translate(-50%, -50%); /* Move the overlay back by half of its own width and height */
-  width: auto; /* Set the width of the overlay */
-  height: 70%; /* Auto-adjust the height to maintain aspect ratio */
-  z-index: 997; /* Ensure the overlay is on top of other content */
-  
-  
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  display: none;
+  max-width: 700px;
+  max-height: 700px;
+  z-index: 990;
 }
 
 /* For Firefox */
@@ -379,6 +350,7 @@ a {
   text-decoration: none; /* Remove underline */
   color: black; /* Change text color */
   cursor: none;
+  z-index: 999;
 }
 
 /* Style for the container */
@@ -476,8 +448,33 @@ a {
   line-height: 40px;
   z-index: 990;
   display: none; /* Hidden by default */
+  padding: 0;
 }
 
 .scroll-to-top:hover {
-  background-color: #e69500; /* Slightly darker orange on hover */
+  filter: invert(70%); /* Slightly darker orange on hover */
+  
+}
+
+.scroll-to-top::before {
+  content: '';
+  position: absolute;
+  top: -30px;  /* Increase clickable area above */
+  bottom: -30px; /* Increase clickable area below */
+  left: -30px;  /* Increase clickable area to the left */
+  right: -30px; /* Increase clickable area to the right */
+}
+
+/* Add loader styling */
+.loading::after {
+  content: "";
+  display: block;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 50px;
+  height: 50px;
+  background-image: url('./load_test.gif');
+  background-size: cover;
 }
