--- a/style.css
+++ b/style.css
@@ -185,7 +185,12 @@ footer {
   bottom: 0;
   right: 1%;
   z-index: 900;
+  @media only screen and (max-width: 600px) {
+
+    z-index: 1;
+  }
 }
+
 
 /* Add styles for the dynamic text */
 #dynamicText {
@@ -204,6 +209,7 @@ footer {
       left: 5%; /* Adjust the left position for smaller screens */
       right: 5%;
       text-align: left; /* Center-align the text on smaller screens */
+      z-index: 990;
       
     }
 }
@@ -369,24 +375,17 @@ a {
   margin-right: 170px;
 }
 
+
 /* Style for the image section */
 .image-section {
    /* Occupy remaining space */
   padding: 20px; /* Add some padding */
-  z-index: 999;
+  z-index: 990;
   
   
 }
 
       /* Responsive styling */
-      @media (max-width: 768px) {
-        .container {
-            flex-direction: column; /* Change to column layout on smaller screens */
-        }
-        .text-section, .image-section {
-            flex: none; /* Reset flex property to default */
-        }
-    }
 
 .image-section img {
   display: block;
@@ -394,8 +393,42 @@ a {
   height: auto; /* Maintain the image's aspect ratio */
   margin-bottom: 20px; /* Add margin between images if needed */
 }
-    
 
+@media (max-width: 600px) {
+  .container {
+      padding-top: 5%;
+      flex-direction:column; /* Change to column layout on smaller screens */
+      position: relative;
+      width: 50vw; /* 80% of the viewport width */
+      padding-left: 2%;
+      padding-right: 5%;
+  }
+  .image-section {
+  padding-left: 0;
+  }
+
+  .image-section img {
+  
+  padding-left: 0;
+  max-width: 80vw;
+
+    }
+  .text-section {
+  line-height: 1;
+  width: 80vw;
+  padding-left: 5%;
+  padding-top: 10px;
+  }
+  .responsive-video {
+    max-width: 80vw; /* 80% of the viewport width */
+   
+}
+  
+}
+    
+.spaced-paragraph {
+  margin-bottom: 20px; /* Adjust this value to set the space between paragraphs */
+}
 /* Add space between h2 and p */
 .text-section h3 {
   margin-bottom: 10px; /* Adjust margin bottom as needed */
