--- a/style.css
+++ b/style.css
@@ -515,3 +515,23 @@ a {
   background-image: url('./load_test.gif');
   background-size: cover;
 }
+
+
+.clickable-image {
+  max-width: 100%;
+  transition: transform 0.3s ease-in-out;
+  z-index: 999;
+  @media only screen and (max-width: 600px) {
+    transition: none;
+  
+}
+}
+
+.enlarged {
+  transform: scale(2);
+  cursor: zoom-out;
+  z-index: 999;
+  @media only screen and (max-width: 600px) {
+    transform: none;
+}
+}
