--- a/style.css
+++ b/style.css
@@ -535,3 +535,36 @@ a {
     transform: none;
 }
 }
+
+#model-container .round-button {
+  width: 50px; /* Set the width */
+  height: 50px; /* Set the height */
+  background-color: orange; /* Set the background color */
+  border-radius: 50%; /* Make it round */
+  border: none; /* Remove the border */
+  cursor: none; /* Change cursor on hover */
+  z-index: 1000;
+  left: 63%;
+  top: 85%;
+
+    /* Adjust positioning for mobile devices */
+    @media only screen and (max-width: 700px) {
+      left: -30%; /* Adjust the left position for smaller screens */
+      top: 700%;
+
+      text-align: center; /* Center-align the text on smaller screens */
+    }
+}
+
+/* Adjust button appearance on hover */
+.round-button:hover {
+  filter: invert(70%);
+  opacity: 0.8;
+}
+/* Override hover effect for mobile devices */
+@media only screen and (max-width: 600px) {
+  .round-button:hover {
+    filter: none; /* Remove hover effect on mobile devices */
+    opacity: 1; /* Ensure full opacity on mobile devices */
+  }
+}
